--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     },
     "homepage": "https://github.com/devinroche/mapz#readme",
     "dependencies": {
-      "webpack": "^4.12.0"
+        "webpack": "^4.12.0"
     },
     "scripts": {
-        "start": "npm run webpack",
-        "webpack": "webpack -d --watch"
+        "start": "npm run webpack && open dist/index.html",
+        "webpack": "webpack -d"
     },
     "devDependencies": {
         "webpack-cli": "^3.0.3"
