--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
         "webpack": "webpack -d"
     },
     "devDependencies": {
+        "copy-webpack-plugin": "^4.5.1",
+        "file-loader": "^1.1.11",
+        "html-webpack-plugin": "^3.2.0",
         "webpack-cli": "^3.0.3"
     }
 }
